<resources>
    <string name="LimitInternet">Limit Internet speed to save your Internet package quota</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="addMacNameDesc">Kindly enter a custom name for the selected device</string>
    <string name="addMacNameTitle">Add Device Name</string>
    <string name="addPingServer">Add Server</string>
    <string name="addPingServerHint">Server Hostname</string>
    <string name="addPingServerRequest">Please enter the server Hostname/IP</string>
    <string name="advancedDesc">Reboot or Reset your router configurations</string>
    <string name="advancedLabel">Advanced</string>
    <string name="advancedNote">In this Section you can Reboot or Reset your Router Configuration</string>
    <string name="advancedSettingsIcon">Advanced Settings Card</string>
    <string name="alreadyExists">Preset name already exists.</string>
    <string name="alreadyLoggedIn">There\'s already an active login - Wait few minutes or restart your router</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Router Chef</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="applying">Applying . . .</string>
    <string name="arabic">العربية</string>
    <string name="avg">Average :⠀</string>
    <string name="back">Back</string>
    <string name="bandwidthPermissionDesc">Access required for the Application to Read the Bandwidth Usage information from the System</string>
    <string name="bandwidthPermissionTitle">Permission Needed</string>
    <string name="blacklistNote">Wi-Fi connection will be interrupted when unblock a device ✔</string>
    <string name="blockConnectedDevice">Block From Connected Devices</string>
    <string name="blockDialogDesc">Are you sure to block the selected Device ?</string>
    <string name="blockDialogInput">Name the selected device in the Block List :</string>
    <string name="blockFailed">Failed to block/unblock the device - Validate the info and ensure Filter is active and try again</string>
    <string name="blockList">Black List</string>
    <string name="blockWarning">You are about to block your device from accessing the Wi-Fi, you won\'t be able to connect to the Wi-Fi again from this device, Do you want to continue ?</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="chanTypeDesc">Channel Type represents an indication of the connection delay or ping value - channel type of Fast has the lowest delay but has less immunity against noise</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checkModel">Checking Router Model . .</string>
    <string name="chip_text">Chip text</string>
    <string name="chooseDNS">Choose DNS</string>
    <string name="choosePreset">Choose Preset</string>
    <string name="clearAppData">Clear Data</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="res_0x7f120046_com_crashlytics_android_build_id">6f8fd04782494624b62f913584006dcf</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Confirm</string>
    <string name="confirmBan">Block</string>
    <string name="confirmBlock">Confirm to block the following device from accessing Wi-Fi: \n\n Hostname: %1$s \n Mac Address: %2$s \n\n Enter the new device name in the blacklist:</string>
    <string name="confirmBlockWithoutHostname">Confirm to block the following device from accessing Wi-Fi: \n\n Hostname: %1$s \n Mac Address: %2$s</string>
    <string name="confirmRemoveServerNote">Are you sure about removing server hostname/IP : %1$s ?</string>
    <string name="confirmUnblock">you\'re about to unblock the following device: \n\n Hostname: %1$s \n Mac Address: %2$s \n\n Do you want to continue?</string>
    <string name="connect">Connect</string>
    <string name="connectedDevices">Connected Devices</string>
    <string name="connectedDevicesDesc">Show the connected devices on WiFi to ensure security</string>
    <string name="connectedDevicesIcon">Wifi Connected Devices Card</string>
    <string name="connectedDevicesLabel">Connected Devices</string>
    <string name="connectedDevicesNote">Show the WiFi Connected Devices to Detect any Intruder</string>
    <string name="continueNote">Continue</string>
    <string name="copy">Copy</string>
    <string name="crcDesc">CRC Errors represents the number of not recovered errors happened due to noise effect - high value in short time means unstable internet connection</string>
    <string name="crcErrors">CRC Errors (Up/Down)</string>
    <string name="curSpeedDesc">The current Internet speed that is being delivered by your ISP - you can enjoy this speed only if you\'ve subscribed to it with your ISP</string>
    <string name="currentSpeed">Max Speed (Up/Down)</string>
    <string name="dataPath">Data Path (Up/Down)</string>
    <string name="dataTab">Data</string>
    <string name="daysAgoUsage">Usage from Date</string>
    <string name="default_web_client_id">165930485923-bd9ihrl9oi45guf98o8rac923iavlsen.apps.googleusercontent.com</string>
    <string name="delayDesc">Interleaved delay represents the result delay value from the Interleaved channel type to overcome noise effect on the connection</string>
    <string name="deleteMacName">Remove</string>
    <string name="deleteMacNameToast">Deleted Successfully ��</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="depthDesc">Interleaved Depth is the number of immunity units against noise in a packet - less value means low delay but also lower immunity against noise</string>
    <string name="descImage">Illustration image</string>
    <string name="deviceHostname">Hostname :</string>
    <string name="deviceMac">Device MAC</string>
    <string name="deviceMacHint">Enter the Device MAC</string>
    <string name="deviceName">Device Name</string>
    <string name="deviceNameHint">Enter the device name</string>
    <string name="deviceNaming">Naming :</string>
    <string name="device_icon">Device Icon</string>
    <string name="devicesBlockerNote">Wi-Fi connection will be interrupted when blocking a device ❌</string>
    <string name="disconnectMsg">Connection Lost - Please reconnect and Login again ��</string>
    <string name="dns1">1st DNS</string>
    <string name="dns1Hint">Enter Primary DNS IP</string>
    <string name="dns2">2nd DNS</string>
    <string name="dns2Hint">Enter Secondary DNS IP</string>
    <string name="dnsList">DNS List</string>
    <string name="isp">ISP Company</string>
    <string name="ispSettings">ISP Settings</string>
    <string name="lang">language</string>
    <string name="langSettings">Language Settings</string>
    <string name="macNameInputHint">Enter the device name</string>
    <string name="manageMacNameTitle">Modify Device Name</string>
    <string name="newVersionDesc">A new version of Router Chef is available now on Google Play, update now to enjoy new features ��</string>
    <string name="newVersionTitle">New Update !</string>
    <string name="newVersionUpdate">Update</string>
    <string name="removeServerTitle">Remove Server</string>
    <string name="routerModel">Router Model</string>
    <string name="routerSettings">Router Settings</string>
    <string name="saveMacName">Save</string>
    <string name="step1">Step 1 ��</string>
    <string name="step1_desc">Welcome my friend, at first you need to select your preferred language, Internet Service Provider and Router Model which can be found on a label at the back of your Router</string>
    <string name="warningTitle">Important Warning !</string>
    <string name="yes">Yes</string>
</resources>