<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center" android:layout_width="350dp" android:layout_height="wrap_content" android:layout_margin="16dp">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardCornerRadius="@dimen/round_radius" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/secondary_color_variant" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="14sp" android:textStyle="bold" android:id="@+id/saveMacNameBtn" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:minWidth="150dp" android:text="@string/saveMacName" android:ems="5" android:layout_weight="1" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/macNameInput" style="@style/buttonStyle"/>
            <EditText android:textSize="14sp" android:id="@+id/macNameInput" android:visibility="visible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" android:minHeight="48dp" android:hint="@string/macNameInputHint" android:ems="10" android:inputType="textWebEmailAddress" android:textAlignment="center" android:importantForAutofill="no" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView12" style="@style/editTextRounded"/>
            <ImageView android:id="@+id/closeImgView" android:layout_width="35dp" android:layout_height="35dp" android:layout_marginTop="16dp" android:contentDescription="@string/close" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_baseline_close"/>
            <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/sandy_color" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addMacNameTitle" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/closeImgView"/>
            <TextView android:gravity="start" android:id="@+id/textView12" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/addMacNameDesc" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
