<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center" android:background="@drawable/danger_button" android:layout_width="350dp" android:layout_height="wrap_content" android:layout_margin="16dp">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardCornerRadius="@dimen/round_radius" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/secondary_color_variant" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="14sp" android:textStyle="bold" android:id="@+id/continueBtn" android:background="@drawable/danger_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/continueNote" android:ems="5" app:layout_constraintBaseline_toBaselineOf="@+id/cancelBtn" app:layout_constraintEnd_toStartOf="@+id/cancelBtn" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" style="@style/buttonStyle"/>
            <Button android:textSize="14sp" android:textStyle="bold" android:id="@+id/cancelBtn" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/back" android:ems="5" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@+id/continueBtn" app:layout_constraintTop_toBottomOf="@+id/removingPingServerNote" style="@style/buttonStyle"/>
            <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/pingTimeout" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/warningTitle" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:gravity="start" android:id="@+id/removingPingServerNote" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/blockWarning" app:layout_constraintEnd_toEndOf="@+id/cancelBtn" app:layout_constraintStart_toStartOf="@+id/continueBtn" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
