<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/secondary_color" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="15dp" android:paddingEnd="15dp" app:flow_horizontalAlign="2">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@+id/titleImage" android:layout_width="match_parent" android:layout_height="0dp" android:src="@drawable/image1" android:scaleType="centerInside" android:contentDescription="@string/descImage" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintDimensionRatio="1:0.85" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:textSize="@dimen/onboarding_title" android:textColor="@color/primary_color" android:id="@+id/textTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/step1" android:textAlignment="center"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/onboarding_description" android:textColor="@color/white" android:id="@+id/textDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/step1_desc" android:lineSpacingMultiplier="@dimen/onboarding_lineSpaceMul" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
