<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center" android:layout_width="350dp" android:layout_height="wrap_content" android:layout_margin="16dp">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardCornerRadius="@dimen/round_radius" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/secondary_color_variant" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/sandy_color" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/confirm" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:gravity="start" android:id="@+id/textView12" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/blockDialogDesc" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
            <Button android:textSize="14sp" android:textStyle="bold" android:id="@+id/confirmBlockBtn" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:minWidth="150dp" android:text="@string/confirmBan" android:ems="5" android:layout_weight="1" android:layout_marginStart="16dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/cancelBtn" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView12" style="@style/buttonDanger"/>
            <Button android:textSize="14sp" android:textStyle="bold" android:id="@+id/cancelBtn" android:layout_width="0dp" android:layout_height="wrap_content" android:minWidth="150dp" android:text="@string/cancel" android:ems="5" android:layout_weight="1" android:layout_marginStart="8dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/confirmBlockBtn" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@+id/confirmBlockBtn" app:layout_constraintTop_toTopOf="@+id/confirmBlockBtn" app:layout_constraintVertical_bias="0" style="@style/buttonStyle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
