<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center" android:layout_width="350dp" android:layout_height="wrap_content" android:layout_margin="16dp">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardCornerRadius="@dimen/round_radius" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/secondary_color_variant" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="14sp" android:textStyle="bold" android:id="@+id/dialogBtn" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" android:minWidth="150dp" android:text="@string/newVersionUpdate" android:ems="5" android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/contentMsg" style="@style/buttonStyle"/>
            <ImageView android:id="@+id/closeImgView" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginTop="16dp" android:contentDescription="@string/close" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_baseline_close"/>
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/sandy_color" android:id="@+id/dialogTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/newVersionTitle" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/closeImgView"/>
            <TextView android:gravity="start" android:id="@+id/contentMsg" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/newVersionDesc" app:layout_constraintEnd_toEndOf="@+id/dialogBtn" app:layout_constraintStart_toStartOf="@+id/dialogBtn" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
            <ImageView android:id="@+id/imageView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:adjustViewBounds="true" android:maxWidth="300dp" android:maxHeight="200dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialogTitle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
